<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1"
    tools:context="com.sauca.ard_wifi.Main">

    <android.support.v7.widget.SwitchCompat
        android:id="@+id/STC_WIFI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:onClick="onClick"
        android:paddingEnd="10dp"
        android:paddingLeft="20dp"
        android:paddingRight="10dp"
        android:paddingStart="20dp"
        android:scaleY="1.5"
        android:text="@string/bt_off"
        android:textOff="@string/bt_off"
        android:textOn="@string/bt_on"
        android:textSize="25sp"
        android:textStyle="bold"
        android:theme="@style/MySwitch"
        app:switchMinWidth="70dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1">

        <TextView
            android:id="@+id/T_Tex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/NConect"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.299"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.701" />

        <Button
            android:id="@+id/BT_TLeds"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/T_Tex"
            android:text="@string/Leds" />
    </RelativeLayout>

    <Button
        android:id="@+id/BT_Sair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp"
        android:text="@string/bt_sair"
        tools:layout_editor_absoluteX="264dp"
        tools:layout_editor_absoluteY="447dp" />

</LinearLayout>
