<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CL_Motor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sauca.ard_wifi.Motor"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <ToggleButton
        android:id="@+id/TB_Motor1"
        style="@style/AppTheme"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="false"
        android:layout_centerHorizontal="false"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="18dp"
        android:checked="false"
        android:onClick="onClick"
        android:text="@string/M1_Off"
        android:textAlignment="center"
        android:textColorLink="@android:color/transparent"
        android:textOff="@string/M1_Off"
        android:textOn="@string/M1_On"
        android:textSize="24sp"
        android:textStyle="bold"
        android:theme="@style/AppTheme"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <ImageView
        android:id="@+id/IV_M1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/bt_off"
        app:srcCompat="@mipmap/ic_red"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toRightOf="@+id/TB_Motor1"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp" />


    <ImageButton
        android:id="@+id/IB_Back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:contentDescription="@string/bt_Back"
        android:onClick="onClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert" />

</android.support.constraint.ConstraintLayout>
