<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sauca.ard_wifi.Confi"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/RL_Frame2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:id="@+id/BT_Scan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/BT_Ssid"
            android:background="@color/LightRed"
            android:onClick="onClick"
            android:text="@string/Scan"
            android:textColor="@color/White"
            android:textColorLink="@color/LightRed"
            android:textSize="20sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/BT_Ssid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="10dp"
            android:background="@color/Gray"
            android:text="@string/SsidAlterar"
            android:textSize="20sp" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/IB_Back"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bt_Back"
        android:layout_gravity="end"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:onClick="onClick"
        app:srcCompat="@android:drawable/ic_menu_revert" />


</LinearLayout>
