<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lldialog"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp">

    <TextView
        android:id="@+id/txt_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:text="@string/txtdialog"
        android:textSize="16sp"
        android:textStyle="bold" />


    <LinearLayout
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_gravity="center"
        android:background="@color/Blue"
        android:textAlignment="center">

        <Button
            android:id="@+id/btn_yes"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:background="@color/Blue"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/Yes"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginStart="5dp"
            android:background="@color/Blue"
            android:clickable="true"
            android:gravity="center"
            android:text="@string/No"
            android:textAlignment="center"
            android:textColor="@color/White"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>